# MK_AppPortCpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  VScode-init.bat  VScode-init1.bat  build.bat  memcalc_tril.ps1  update_doxy.sh
doc/: CMakeLists_0.txt  add_manifest.md  cfg_ini.md  cfg_ini1.md  deepLern.md  dll_func.txt  edge_rt_00.cpp  imports20260429.txt  include_audit.txt  include_audit1.txt  include_audit3.txt  include_hell.md  main_01.cpp  main_02.cpp  node_rt_00.cpp  note.md
include/: config.hpp  edge.hpp  edge_rt.hpp  env_check.hpp  init_config.hpp  load_config.hpp  logs.hpp  main.hpp  mem_tool.hpp  node.hpp  node_question.hpp  node_rt.hpp  runtime.hpp  save_config.hpp  wizard_engine.hpp  wk_flags.hpp
scripts/: find_shell_parent.sh  fix_map.ps1  fix_map2.ps1  memcalc_appGui.ps1  memcalc_electron.ps1  memcalc_electron1.ps1  memcalc_webkit.ps1
src/: app.manifest  edge_rt.cpp  env_check.cpp  init_config.cpp  load_config.cpp  logsystem.cpp  main.cpp  mem_tool.cpp  node_question.cpp  node_rt.cpp  note.md  save_config.cpp  wizard_engine.cpp  wk_flags.cpp
